--- a/inst/assets/bibliography.bib
+++ b/inst/assets/bibliography.bib
@@ -3,18 +3,6 @@
 
 
 
-@Article{Willis2019,
-  author =	 {Amy D. Willis},
-  title =	 {Rarefaction, Alpha Diversity, and Statistics},
-  journal =	 {Frontiers in Microbiology},
-  year =	 {2019},
-  volume =	 10,
-  doi =		 {10.3389/fmicb.2019.02407}
-}
-
-
-
-
 
 @Book{Aitchison1986,
   author =	 {Aitchison, J},
@@ -1406,6 +1394,7 @@ https://github.com/thomasp85/patchwork},
   file = {/Users/henrikeckermann/Zotero/storage/6A7ZLDAB/Zhou et al. - 2022 - LinDA linear models for differential abundance an.pdf;/Users/henrikeckermann/Zotero/storage/ZF97UC86/s13059-022-02655-5.pdf}
 }
 
+
 @Article{Yang2022,
   title = {A comprehensive evaluation of microbial differential abundance analysis methods: current status and potential solutions},
   shorttitle = {{{ZicoSeq}}},
@@ -1420,6 +1409,7 @@ https://github.com/thomasp85/patchwork},
   langid = {english}
 }
 
+
 @Article{fastANCOM2022,
   title = {fastANCOM: a fast method for analysis of compositions of microbiomes},
   shorttitle = {{{fastANCOM}}},
@@ -1433,6 +1423,7 @@ https://github.com/thomasp85/patchwork},
   langid = {english}
 }
 
+
 @Article{Hu2020,
   title = {Testing hypotheses about the microbiome using the linear decomposition model (LDM)},
   shorttitle = {{{LDM}}},
@@ -1445,6 +1436,7 @@ https://github.com/thomasp85/patchwork},
   issn = {14},
   langid = {english}
 }
+
 
 @Article{Zhu2021,
   title = {Constraining PERMANOVA and LDM to within-set comparisons by projection improves the efficiency of analyses of matched sets of microbiome data},
@@ -1472,6 +1464,7 @@ https://github.com/thomasp85/patchwork},
   langid = {english}
 }
 
+
 @Article{Brill2019,
   title = {Testing for Differential Abundance in Compositional Counts Data, with Application to Microbiome Studies},
   shorttitle = {{{DACOMP}}},
@@ -1483,6 +1476,7 @@ https://github.com/thomasp85/patchwork},
   page ={2648-2671},
   langid = {english}
 }
+
 
 @Article{Omnibus2018,
   title = {An omnibus test for differential distribution analysis of microbiome sequencing data},
@@ -1496,6 +1490,7 @@ https://github.com/thomasp85/patchwork},
   page ={643-651},
   langid = {english}
 }
+
 
 @Article{Liu2020,
   title = {An empirical Bayes approach to normalization and differential abundance testing for microbiome data},
@@ -1511,6 +1506,7 @@ https://github.com/thomasp85/patchwork},
   doi = {10.1186/s12859-020-03552-z}
 }
 
+
 @Article{Ling2021,
   title = {Powerful and robust non-parametric association testing for microbiome data via a zero-inflated quantile approach (ZINQ)},
   shorttitle = {{{ZINQ}}},
@@ -1523,6 +1519,7 @@ https://github.com/thomasp85/patchwork},
   langid = {english},
   doi = {10.1186/s40168-021-01129-3}
 }
+
 
 @Article{Kumar2018,
   title = {Analysis and correction of compositional bias in sparse sequencing count data},
@@ -1537,6 +1534,7 @@ https://github.com/thomasp85/patchwork},
   langid = {english},
   doi = {10.1186/s12864-018-5160-5}
 }
+
 
 @Article{ZIBB2018,
   title = {A Zero-inflated Beta-binomial Model for Microbiome Data Analysis},
@@ -1583,6 +1581,7 @@ volume = {4},
 year = {2005}
 }
 
+
 @article{yoon2019microbial,
   title = {{Microbial networks in SPRING - Semi-parametric rank-based correlation and partial correlation estimation for quantitative microbiome data}},
   author = {Yoon, Grace and Gaynanova, Irina and M{\"u}ller, Christian L},
@@ -1593,6 +1592,7 @@ year = {2005}
   doi = {10.3389/fgene.2019.00516}
 }
 
+
 @article{yoon2021fast,
   title={Fast computation of latent correlations},
   author={Yoon, Grace and M{\"u}ller, Christian L and Gaynanova, Irina},
@@ -1602,6 +1602,7 @@ year = {2005}
   pages={1249--1256},
   year={2021}
 }
+
 
 @article{peschel2021netcomi,
     author = {Peschel, Stefanie and M{\"{u}}ller, Christian L and von Mutius, Erika and Boulesteix, Anne-Laure and Depner, Martin},
@@ -1614,6 +1615,7 @@ year = {2005}
     doi = {10.1093/bib/bbaa290}
 }
 
+
 @article{potbhare2022skin,
   title = {Skin microbiota diversity among genetically unrelated individuals of Indian origin},
   author = {Potbhare, Renuka and RaviKumar, Ameeta and Munukka, Eveliina and Lahti, Leo and Ashma, Richa},
@@ -1623,6 +1625,7 @@ year = {2005}
   year = {2022},
   doi = {10.7717/peerj.13075}
 }
+
 
 @article{vanDongen2012metric,
 arxivId = {1208.3145},
@@ -1636,6 +1639,7 @@ volume = {2},
 year = {2012}
 }
 
+
 @article{ullmann2023over,
   title = {Over-optimism in unsupervised microbiome analysis: Insights from network learning and clustering},
   author = {Ullmann, Theresa and Peschel, Stefanie and Finger, Philipp and M{\"u}ller, Christian L and Boulesteix, Anne-Laure},
@@ -1647,6 +1651,7 @@ year = {2012}
   doi = {10.1371/journal.pcbi.1010820}
 }
 
+
 @article{meinshausen2006high,
 author = {Meinshausen, Nicolai and B{\"{u}}hlmann, Peter},
 doi = {10.1214/009053606000000281},
@@ -1657,6 +1662,7 @@ title = {{High-dimensional graphs and variable selection with the Lasso}},
 volume = {34},
 year = {2006}
 }
+
 
 @article{friedman2008sparse,
 author = {Friedman, Jerome and Hastie, Trevor and Tibshirani, Robert},
@@ -1672,6 +1678,7 @@ volume = {9},
 year = {2008}
 }
 
+
 @article{lovell2015proportionality,
 author = {Lovell, David and Pawlowsky-Glahn, Vera and Egozcue, Juan Jos{\'{e}} and Marguerat, Samuel and B{\"{a}}hler, J{\"{u}}rg},
 doi = {10.1371/journal.pcbi.1004075},
@@ -1686,6 +1693,7 @@ volume = {11},
 year = {2015}
 }
 
+
 @article{liu2010stability,
 author = {Liu, Han and Roeder, Kathryn and Wasserman, Larry},
 doi = {10.48550/arxiv.1006.3316},
@@ -1693,6 +1701,7 @@ journal = {{Advances in Neural Information Processing Systems}},
 title = {{Stability Approach to Regularization Selection (StARS) for High Dimensional Graphical Models}},
 year = {2010}
 }
+
 
 @article{badri2020shrinkage,
 author = {Badri, Michelle and Kurtz, Zachary D. and Bonneau, Richard and M{\"{u}}ller, Christian L.},
@@ -1707,6 +1716,7 @@ volume = {2},
 year = {2020}
 }
 
+
 @article{fang2015cclasso,
 author = {Fang, Huaying and Huang, Chengcheng and Zhao, Hongyu and Deng, Minghua},
 doi = {10.1093/bioinformatics/btv349},
@@ -1717,6 +1727,7 @@ title = {{CCLasso: Correlation inference for compositional data through Lasso}},
 volume = {31},
 year = {2015}
 }
+
 
 @article{faust2012microbial,
 author = {Faust, Karoline and Sathirapongsasuti, J. Fah and Izard, Jacques and Segata, Nicola and Gevers, Dirk and Raes, Jeroen and Huttenhower, Curtis},
@@ -1730,6 +1741,7 @@ title = {{Microbial Co-occurrence Relationships in the Human Microbiome}},
 volume = {8},
 year = {2012}
 }
+
 
 @article{fang2017gcoda,
 author = {Fang, H and Huang, C and Zhao, H and Deng, M},
@@ -1754,6 +1766,7 @@ volume = {18},
 year = {2017}
 }
 
+
 @article{jardim2019bionetstat,
 author = {Jardim, Vin{\'{i}}cius Carvalho and {De Siqueira Santos}, Suzana and Fujita, Andre and Buckeridge, Marcos Silveira},
 doi = {10.3389/fgene.2019.00594},
@@ -1764,6 +1777,7 @@ title = {{BioNetStat: A tool for biological networks differential analysis}},
 volume = {10},
 year = {2019}
 }
+
 
 @article{he2019statistical,
 author = {He, Hao and Cao, Shaolong and gang Zhang, Ji and Shen, Hui and Wang, Yu Ping and wen Deng, Hong},
@@ -1779,6 +1793,7 @@ volume = {9},
 year = {2019}
 }
 
+
 @article{yu2019new,
 author = {Yu, Danyang and Zhang, Zeyu and Glass, Kimberly and Su, Jessica and DeMeo, Dawn L. and Tantisira, Kelan and Weiss, Scott T. and Qiu, Weiliang},
 doi = {10.1038/s41598-019-40167-8},
@@ -1791,6 +1806,7 @@ volume = {9},
 year = {2019}
 }
 
+
 @article{mckenzie2016dgca,
 author = {McKenzie, Andrew T. and Katsyv, Igor and Song, Won Min and Wang, Minghui and Zhang, Bin},
 doi = {10.1186/s12918-016-0349-1},
@@ -1802,6 +1818,7 @@ title = {{DGCA: A comprehensive R package for Differential Gene Correlation Anal
 volume = {10},
 year = {2016}
 }
+
 
 @article{siska2017differential,
 author = {Siska, Charlotte and Kechris, Katerina},
@@ -1816,6 +1833,7 @@ volume = {10},
 year = {2017}
 }
 
+
 @article{bhuva2019differential,
 author = {Bhuva, Dharmesh D. and Cursons, Joseph and Smyth, Gordon K. and Davis, Melissa J.},
 doi = {10.1186/S13059-019-1851-8},
@@ -1829,6 +1847,7 @@ volume = {20},
 year = {2019}
 }
 
+
 @article{gill2010statistical,
 author = {Gill, Ryan and Datta, Somnath and Datta, Susmita},
 journal = {{BMC Bioinformatics}},
@@ -1838,6 +1857,7 @@ title = {{A statistical framework for differential network analysis from microar
 volume = {11},
 year = {2010}
 }
+
 
 @article{shojaie2021differential,
 author = {Shojaie, Ali},
@@ -1852,6 +1872,7 @@ volume = {13},
 year = {2021}
 }
 
+
 @incollection{fisher1970statistical,
   title={Statistical methods for research workers},
   author={Fisher, Ronald Aylmer},
@@ -1860,6 +1881,7 @@ year = {2021}
   year={1970},
   publisher={Springer}
 }
+
 
 @article{siska2016discordant,
 author = {Siska, Charlotte and Bowler, Russell and Kechris, Katerina},
@@ -1872,6 +1894,7 @@ volume = {32},
 year = {2016},
 publisher={{Oxford University Press}}
 }
+
 
 @article{yaverouglu2014revealing,
 author = {Yavero{\u{g}}lu, {\"O}mer Nebil and Malod-Dognin, No{\"e}l and Davis, Darren and Levnajic, Zoran and Janjic, Vuk and Karapandza, Rasa and Stojmirovic, Aleksandar and Pr{\v{z}}ulj, Nata{\v{s}}a},
@@ -1886,52 +1909,57 @@ volume = {4},
 year = {2014}
 }
 
+
 @article{Lee2019,
-    author = {Lee YH},
+    author = {Lee, Young Ho},
     title = {Strengths and Limitations of Meta-Analysis},
     journal = {The Korean Journal of Internal Medicine},
     volume = {94},
     number = {5},
     pages = {391-395},
-    url = {https://www.ekjm.org/journal/view.php?number=25636},
+    doi = {https://doi.org/10.3904/kjm.2019.94.5.391},
     year = {2019}
 }
 
+
 @article{Finckh2008,
-    author = {Finckh A},
+    author = {Axel Finckh and Martin R Tramèr},
     title = {Primer: strengths and weaknesses of meta-analysis},
     journal = {Nature Clinical Practice Rheumatology},
     volume = {4},
     number = {3},
     pages = {146-152},
-    url = {https://www.nature.com/articles/ncprheum0732},
+    doi = {https://doi.org/10.1038/ncprheum0732},
     year = {2008}
 }
 
+
 @article{Israel2011,
-    author = {Israel H},
+    author = {Heidi Israel and Randy R. Richter},
     title = {A guide to understanding meta-analysis},
     journal = {Journal of Orthopaedic & Sports Physical Therapy},
     volume = {41},
     number = {7},
     pages = {496-504},
-    url = {https://www.jospt.org/doi/10.2519/jospt.2011.3333?url_ver=Z39.88-2003&rfr_id=ori:rid:crossref.org&rfr_dat=cr_pub%20%200pubmed},
+    doi = {https://www.jospt.org/doi/10.2519/jospt.2011.3333},
     year = {2011}
 }
 
+
 @article{Hoffman2019,
-    author = {Hoffman JIE},
+    author = {Julien I.E. Hoffman},
     title = {Basic biostatistics for medical & biomedical practitioners},
     journal = {Indian Journal of Medical Research},
     volume = {154},
     number = {6},
     pages = {899–900},
-    url = {https://www.ncbi.nlm.nih.gov/pmc/articles/PMC9347243/},
+    doi = {https://doi.org/10.1016/C2018-0-02190-8},
     year = {2019}
 }
 
+
 @article{Haidich2010,
-    author = {Haidich AB},
+    author = {A. B. Haidich},
     title = {Meta-analysis in medical research},
     journal = {Hippokratia},
     volume = {14},
@@ -1941,235 +1969,217 @@ year = {2014}
     year = {2010}
 }
 
+
 @article{Ma2022,
-    author = {Ma S},
-    title = {Population structure discovery in meta-analyzed microbial communities and inflammatory bowel disease using MMUPHin},
+    author = {Siyuan Ma and Dmitry Shungin and Himel Mallick and Melanie Schirmer and Long H. Nguyen and Raivo Kolde and Eric Franzosa and Hera Vlamakis and Ramnik Xavier and Curtis Huttenhower },
+    title = {Population structure discovery in meta-analyzed microbial communities and inflammatory bowel disease using {MMUPHin}},
     journal = {Genome Biology},
     volume = {23},
     number = {1},
     pages = {208},
-    url = {https://genomebiology.biomedcentral.com/articles/10.1186/s13059-022-02753-4},
+    doi = {https://doi.org/10.1186/s13059-022-02753-4},
     year = {2022}
 }
 
+
 @article{Pasolli2017,
-    author = {Pasolli E},
-    title = {Accessible, curated metagenomic data through ExperimentHub},
+    author = {Edoardo Pasolli and Lucas Schiffer and Paolo Manghi and Audrey Renson and Valerie Obenchain and Duy Tin Truong and Francesco Beghini and Faizan Malik and Marcel Ramos and Jennifer B Dowd and Curtis Huttenhower and Martin Morgan and Nicola Segata and Levi Waldron },
+    title = {Accessible, curated metagenomic data through {ExperimentHub}},
     journal = {Nature Methods},
     volume = {14},
     number = {11},
     pages = {1023-1024},
-    url = {https://www.nature.com/articles/nmeth.4468},
+    doi = {https://doi.org/10.1038/nmeth.4468},
     year = {2017}
 }
 
+
 @article{Mallick2021,
-    author = {Mallick H},
+    author = {Himel Mallick and Ali Rahnavard and Lauren J. McIver and Siyuan Ma and Yancong Zhang and Long H. Nguyen and Timothy L. Tickle and George Weingart and Boyu Ren and Emma H. Schwager and Suvo Chatterjee and Kelsey N. Thompson and Jeremy E. Wilkinson and Ayshwarya Subramanian and Yiren Lu and Levi Waldron and Joseph N. Paulson and Eric A. Franzosa and Hector Corrada Bravo and Curtis Huttenhower},
     title = {Multivariable Association Discovery in Population-scale Meta-omics Studies},
     journal = {PLOS Computational Biology},
     volume = {17},
     number = {11},
     pages = {e1009442},
-    url = {https://journals.plos.org/ploscompbiol/article?id=10.1371/journal.pcbi.1009442},
+    doi = {https://doi.org/10.1371/journal.pcbi.1009442},
     year = {2021}
 }
 
+
 @article{Frankel2017,
-    author = {Frankel AE},
+    author = {Arthur E Frankel and Laura A Coughlin and Jiwoong Kim and Thomas W Froehlich and Yang Xie and Eugene P Frenkel and Andrew Y Koh},
     title = {Metagenomic Shotgun Sequencing and Unbiased Metabolomic Profiling Identify Specific Human Gut Microbiota and Metabolites Associated with Immune Checkpoint Therapy Efficacy in Melanoma Patients},
     journal = {Neoplasia},
     volume = {19},
     number = {10},
     pages = {848-855},
-    url = {https://www.clinicalkey.com/#!/content/playContent/1-s2.0-S1476558617302385?returnurl=https:%2F%2Flinkinghub.elsevier.com%2Fretrieve%2Fpii%2FS1476558617302385%3Fshowall%3Dtrue&referrer=https:%2F%2Fpubmed.ncbi.nlm.nih.gov%2F},
+    doi = {10.1016/j.neo.2017.08.004},
     year = {2017}
 }
 
+
 @article{Lee2022,
-    author = {Lee KA},
+    author = {Karla A. Lee and Andrew Maltez Thomas and Laura A. Bolte and Johannes R. Björk and Laura Kist de Ruijter and Federica Armanini and Francesco Asnicar and Aitor Blanco-Miguez and Ruth Board and Neus Calbet-Llopart and Lisa Derosa and Nathalie Dhomen and Kelly Brooks and Mark Harland and Mark Harries and Emily R. Leeming and Paul Lorigan and Paolo Manghi and Richard Marais and Julia Newton-Bishop and Luigi Nezi and Federica Pinto and Miriam Potrony and Susana Puig and Patricio Serra-Bellver and Heather M. Shaw and Sabrina Tamburini and Sara Valpione and Amrita Vijay and Levi Waldron and Laurence Zitvogel and Moreno Zolfo and Elisabeth G. E. de Vries and Paul Nathan and Rudolf S. N. Fehrmann and Véronique Bataille and Geke A. P. Hospers and Tim D. Spector and Rinse K. Weersma and Nicola Segata},
     title = {Cross-cohort gut microbiome associations with immune checkpoint inhibitor response in advanced melanoma},
     journal = {Nature Medicine},
     volume = {28},
     number = {3},
     pages = {535-544},
-    url = {https://www.nature.com/articles/s41591-022-01695-5},
+    doi = {https://doi.org/10.1038/s41591-022-01695-5},
     year = {2022}
 }
 
+
 @article{Matson2018,
-    author = {Matson V},
+    author = {Vyara Matson and Jessica Fessler and Riyue Bao and Tara Chongsuwat and Yuanyuan Zha and Maria-Luisa Alegre and Jason J Luke and Thomas F Gajewski},
     title = {The commensal microbiome is associated with anti-PD-1 efficacy in metastatic melanoma patients},
     journal = {Science},
     volume = {359},
     number = {6371},
     pages = {104-108},
-    url = {https://www.science.org/doi/10.1126/science.aao3290?url_ver=Z39.88-2003&rfr_id=ori:rid:crossref.org&rfr_dat=cr_pub%20%200pubmed},
+    doi = {10.1126/science.aao3290},
     year = {2018}
 }
 
+
 @article{Peters2019,
-    author = {Peters BA},
+    author = {Brandilyn A. Peters and Melissa Wilson and Una Moran and Anna Pavlick and Allison Izsak and Todd Wechter and Jeffrey S. Weber and Iman Osman and Jiyoung Ahn},
     title = {Relating the gut metagenome and metatranscriptome to immunotherapy responses in melanoma patients},
     journal = {Genome Medicine},
     volume = {11},
     number = {1},
     pages = {61},
-    url = {https://genomemedicine.biomedcentral.com/articles/10.1186/s13073-019-0672-4},
+    doi = {10.1186/s13073-019-0672-4},
     year = {2019}
 }
 
+
 @article{Wind2020,
-    author = {Wind TT},
+    author = {Thijs T Wind and Ranko Gacesa and Arnau Vich Vila and Jacco J de Haan and Mathilde Jalving and Rinse K Weersma and Geke A P Hospers},
     title = {Gut microbial species and metabolic pathways associated with response to treatment with immune checkpoint inhibitors in metastatic melanoma},
     journal = {Melanoma Research},
     volume = {30},
     number = {3},
     pages = {235-246},
-    url = {https://journals.lww.com/melanomaresearch/fulltext/2020/06000/gut_microbial_species_and_metabolic_pathways.2.aspx},
+    doi = {10.1097/CMR.0000000000000656},
     year = {2020}
 }
 
+
 @article{Tang2016,
-    author = {Tang ZZ},
-    title = {PERMANOVA-S: association test for microbial community composition that accommodates confounders and multiple distances},
+    author = {Zhengzheng Tang and Guanhua Chen and Alexander V Alekseyenko},
+    title = {{PERMANOVA-S}: association test for microbial community composition that accommodates confounders and multiple distances},
     journal = {Bioinformatics},
     volume = {32},
     number = {17},
     pages = {2618-2625},
-    url = {https://academic.oup.com/bioinformatics/article/32/17/2618/2450751?login=true},
+    doi = {10.1093/bioinformatics/btw311},
     year = {2016}
 }
 
+
 @article{Mallick2022,
-    author = {Mallick H},
+    author = {Himel Mallick and Suvo Chatterjee and Shrabanti Chowdhury and Saptarshi Chatterjee and Ali Rahnavard and Stephanie C Hicks and},
     title = {Differential expression of single-cell RNA-seq data using Tweedie models},
     journal = {Statistics in Medicine},
     volume = {41},
     number = {18},
     pages = {3492-3510},
-    url = {https://www.ncbi.nlm.nih.gov/pmc/articles/PMC9288986/},
+    doi = {10.1002/sim.9430},
     year = {2022}
 }
 
 
 @article{Ding2022,
-    author = {Ding DY},
+    author = {Daisy Yi Ding and Shuangning Li and Balasubramanian Narasimhan and Robert Tibshirani},
     title = {Cooperative learning for multiview analysis},
     journal = {Proceedings of the National Academy of Sciences},
     volume = {119},
     number = {38},
     pages = {e2202113119},
-    url = {https://www.pnas.org/doi/full/10.1073/pnas.2202113119},
+    doi = {https://doi.org/10.1073/pnas.2202113119},
     year = {2022}
 }
 
+
 @article{Van2007,
-    author = {Van der Laan MJ},
+    author = {Mark J. van der Laan and Eric C Polley and Alan E. Hubbard},
     title = {Super learner},
     journal = {Statistical Applications in Genetics and Molecular Biology},
     volume = {6},
-    number = {},
-    pages = {Article25},
-    url = {https://www.degruyter.com/document/doi/10.2202/1544-6115.1309/html},
+    issue = {1},
+    pages = {Article 25},
+    doi = {https://doi.org/10.2202/1544-6115.1309},
     year = {2007}
 }
 
-@article{Mallick2023,
-    author = {Mallick H},
+
+@article{Mallick2024,
+    author = {Himel Mallick and Anupreet Porwal and Satabdi Saha and Piyali Basak and Vladimir Svetnik and Erina Paul and},
     title = {An integrated Bayesian framework for multi-omics prediction and classification},
     journal = {Statistics in Medicine},
     volume = {43},
     number = {5},
     pages = {983-1002},
-    url = {https://pubmed.ncbi.nlm.nih.gov/38146838/},
+    doi = {10.1002/sim.9953},
     year = {2023}
 }
 
+
 @article{Lloyd-Price2019,
-    author = {Lloyd-Price J},
+    author = {Jason Lloyd-Price and Cesar Arze and Ashwin N. Ananthakrishnan and Melanie Schirmer and Julian Avila-Pacheco and Tiffany W. Poon and Elizabeth Andrews and Nadim J. Ajami and Kevin S. Bonham and Colin J. Brislawn and David Casero and Holly Courtney and Antonio Gonzalez and Thomas G. Graeber and A. Brantley Hall and Kathleen Lake and Carol J. Landers and Himel Mallick and Damian R. Plichta and Mahadev Prasad and Gholamali Rahnavard and Jenny Sauk and Dmitry Shungin and Yoshiki Vázquez-Baeza and Richard A. White III and IBDMDB Investigators and Jonathan Braun and Lee A. Denson and Janet K. Jansson and Rob Knight and Subra Kugathasan and Dermot P. B. McGovern and Joseph F. Petrosino and Thaddeus S. Stappenbeck and Harland S. Winter and Clary B. Clish and Eric A. Franzosa and Hera Vlamakis and Ramnik J. Xavier and Curtis Huttenhower},
     title = {Multi-omics of the gut microbial ecosystem in inflammatory bowel diseases},
     journal = {Nature},
     volume = {569},
     number = {7758},
     pages = {655-662},
-    url = {},
+    doi = {https://doi.org/10.1038/s41586-019-1237-9},
     year = {2019}
 }
 
+
 @article{Subramanian2005,
-    author = {Subramanian A},
+    author = {Aravind Subramanian and Pablo Tamayo and Vamsi K Mootha and Sayan Mukherjee and Benjamin L Ebert and Michael A Gillette and Amanda Paulovich and Scott L Pomeroy and Todd R Golub and Eric S Lander and Jill P Mesirov},
     title = {Gene set enrichment analysis: a knowledge-based approach for interpreting genome-wide expression profiles},
     journal = {Proceedings of the National Academy of Sciences},
     volume = {102},
     number = {43},
     pages = {15545-15550},
-    url = {https://www.pnas.org/doi/10.1073/pnas.0506580102?url_ver=Z39.88-2003&rfr_id=ori:rid:crossref.org&rfr_dat=cr_pub%20%200pubmed},
+    doi = {10.1073/pnas.0506580102},
     year = {2005}
 }
 
+
 @article{Kou2020,
-    author = {Kou Y},
+    author = {Yan Kou and Xiaomin Xu and Zhengnong Zhu and Lei Dai and Yan Tan},
     title = {Microbe-set enrichment analysis facilitates functional interpretation of microbiome profiling data},
     journal = {Scientific Reports},
     volume = {10},
     number = {1},
     pages = {21466},
-    url = {https://www.nature.com/articles/s41598-020-78511-y},
+    doi = {10.1038/s41598-020-78511-y},
     year = {2020}
 }
 
+
 @article{Langfelder2008,
-    author = {Langfelder},
-    title = {WGCNA: an R package for weighted correlation network analysis},
+    author = {Peter Langfelder and Steve Horvath},
+    title = {{WGCNA}: an R package for weighted correlation network analysis},
     journal = {BMC Bioinformatics},
     volume = {9},
-    number = {},
     pages = {559},
-    url = {https://bmcbioinformatics.biomedcentral.com/articles/10.1186/1471-2105-9-559},
+    doi = {https://doi.org/10.1186/1471-2105-9-559},
     year = {2008}
 }
 
+
 @article{Geistlinger2023,
-    author = {Geistlinger L},
-    title = {BugSigDB captures patterns of differential abundance across a broad range of host-associated microbial signatures},
+    author = {Ludwig Geistlinger and Chloe Mirzayi and Fatima Zohra and Rimsha Azhar and Shaimaa Elsafoury and Clare Grieve and Jennifer Wokaty and Samuel David Gamboa-Tuz and Pratyay Sengupta and Issac Hecht and Aarthi Ravikrishnan and Rafael S. Gonçalves and Eric Franzosa and Karthik Raman and Vincent Carey and Jennifer B. Dowd and Heidi E. Jones and Sean Davis and Nicola Segata and Curtis Huttenhower and Levi Waldron},
+    title = {{BugSigDB} captures patterns of differential abundance across a broad range of host-associated microbial signatures},
     journal = {Nature Biotechnology},
-    volume = {},
-    number = {},
-    pages = {},
-    url = {https://doi.org/10.1038/s41587-023-01872-y},
+    volume = {42},
+    number = {5},
+    pages = {790-802},
+    doi = {https://doi.org/10.1038/s41587-023-01872-y},
     year = {2023}
-}
-
-@article{Legendre2001,
-  author = {Legendre, Pierre and Gallagher, Eugene D.},
-  title = {Ecologically Meaningful Transformations for Ordination of Species Data},
-  journal = {Oecologia},
-  month = oct,
-  volume = {129},
-  number = {2},
-  pages = {271--280},
-  doi = {10.1007/s004420100716},
-  year = {2001}
-}
-
-@article{Schloss2024rarefaction1,
-    author = {Patrick D. Schloss},
-    title = {Rarefaction is currently the best approach to control for uneven sequencing effort in amplicon sequence analyses},
-    journal = {{mSphere}},
-    volume = {9},
-    number = {2},
-    pages = {e00354-23},
-    doi = {10.1128/msphere.00354-23},
-    year = {2024}
-}
-
-@article{Schloss2024rarefaction2,
-    author = {Patrick D. Schloss},
-    title = {Waste not, want not: revisiting the analysis that called into question the practice of rarefaction},
-    journal = {{mSphere}},
-    volume = {9},
-    number = {1},
-    pages = {e00355-23},
-    doi = {10.1128/msphere.00355-23},
-    year = {2024}
 }
