--- a/inst/pages/04_containers.qmd
+++ b/inst/pages/04_containers.qmd
@@ -680,7 +680,7 @@ col.data <- read.csv(sample_meta_file_path,
 
 # Add this sample data to colData of the taxonomic data object
 # Note that the data must be given in a DataFrame format (required for our purposes)
-colData(tse) <- DataFrame(col.data)
+colData(tse) <- DataFrame(sample_meta)
 ```
 
 Now the `colData` includes the sample metadata.
