--- a/inst/pages/21_microbiome_community.qmd
+++ b/inst/pages/21_microbiome_community.qmd
@@ -1,3 +1,9 @@
+---
+editor: 
+  markdown: 
+    wrap: 72
+---
+
 # Community Composition {#sec-microbiome-community}
 
 ```{r setup, echo=FALSE, results="asis"}
@@ -16,10 +22,10 @@ tse <- GlobalPatterns
 ### Composition barplot
 
 A typical way to visualize microbiome composition is by using a
-composition barplot. In the following, relative abundance is
-calculated, and top taxa are retrieved for the Phylum rank. Thereafter,
-the barplot is visualized ordering rank by abundance values and
-samples by "Bacteroidetes":
+composition barplot. In the following, relative abundance is calculated,
+and top taxa are retrieved for the Phylum rank. Thereafter, the barplot
+is visualized ordering rank by abundance values and samples by
+"Bacteroidetes":
 
 ```{r}
 library(miaViz)
@@ -44,15 +50,15 @@ plotAbundance(tse_phylum, assay.type="relabundance", rank = "Phylum",
 ### Composition heatmap {#sec-composition-heatmap}
 
 Community composition can be visualized with heatmap, where the
-horizontal axis represents samples and the vertical axis the
-taxa. The color of each intersection point represents abundance of a taxon
-in a specific sample.
+horizontal axis represents samples and the vertical axis the taxa. The
+color of each intersection point represents abundance of a taxon in a
+specific sample.
 
-Here,  abundances are  first CLR  (centered log-ratio)  transformed to
-remove  compositionality bias. Then  Z  transformation  is applied  to
-CLR-transformed  data. This  shifts all  taxa  to zero  mean and  unit
-variance, allowing visual comparison  between taxa that have different
-absolute  abundance  levels.  After  these  rough  visual  exploration
+Here, abundances are first CLR (centered log-ratio) transformed to
+remove compositionality bias. Then Z transformation is applied to
+CLR-transformed data. This shifts all taxa to zero mean and unit
+variance, allowing visual comparison between taxa that have different
+absolute abundance levels. After these rough visual exploration
 techniques, we can visualize the abundances at Phylum level.
 
 ```{r heatmap}
@@ -94,7 +100,8 @@ ggplot(df, aes(x = SampleID, y = FeatureID, fill = clr_z)) +
   labs(x = "Samples", y = "Taxa")
 ```
 
-_pheatmap_ is a package that provides methods to plot clustered heatmaps. 
+*pheatmap* is a package that provides methods to plot clustered
+heatmaps.
 
 ```{r pheatmap1}
 library(pheatmap)
@@ -122,7 +129,8 @@ mat <- assay(tse_phylum_subset, "clr_z")
 pheatmap(mat)
 ```
 
-We can create clusters by hierarchical clustering and add them to the plot.
+We can create clusters by hierarchical clustering and add them to the
+plot.
 
 ```{r pheatmap2}
 library(ape)
@@ -147,7 +155,7 @@ taxa_ordered <- get_taxa_name(taxa_tree)
 taxa_tree
 ```
 
-Based on the phylo tree, we decide to create three clusters. 
+Based on the phylo tree, we decide to create three clusters.
 
 ```{r pheatmap4}
 # Creates clusters
@@ -225,11 +233,20 @@ pheatmap(mat, annotation_row = taxa_clusters,
 
 ### Composition heatmap using the NeatMap method {#sec-composition-neatmap}
 
-Another method to visualize community composition is by plotting a NeatMap, which means we use radial theta sorting when plotting the heatmap [@Rajaram2010]. The `getNeatOrder` function in the `miaViz` package allows us to achieve this. This method sorts data points based on their angular position in a 2D space, typically after an ordination technique such as PCA or NMDS has been applied.
+Another method to visualize community composition is by plotting a
+NeatMap, which means we use radial theta sorting when plotting the
+heatmap [@Rajaram2010]. The `getNeatOrder` function in the `miaViz`
+package allows us to achieve this. This method sorts data points based
+on their angular position in a 2D space, typically after an ordination
+technique such as PCA or NMDS has been applied.
 
-The `getNeatOrder` method calculates the angle (theta) for each point relative to the centroid and sorts data points based on these theta values in ascending order. This approach preserves the relationships between data points according to the ordination method's spatial configuration, rather than relying on hierarchical clustering.
+The `getNeatOrder` method calculates the angle (theta) for each point
+relative to the centroid and sorts data points based on these theta
+values in ascending order. This approach preserves the relationships
+between data points according to the ordination method's spatial
+configuration, rather than relying on hierarchical clustering.
 
-Now we can create a NeatMap using our original tse object.
+Now we can create a NeatMap using our original tse object and the ComplexHeatmap package.
 
 ```{r neatmap}
 library(mia)
@@ -274,9 +291,9 @@ heatmap
 
 In addition, there are also other packages that provide functions for
 more complex heatmaps, such as those provided by
-[_iheatmapr_](https://docs.ropensci.org/iheatmapr/articles/full_vignettes/iheatmapr.html)
+[*iheatmapr*](https://docs.ropensci.org/iheatmapr/articles/full_vignettes/iheatmapr.html)
 and ComplexHeatmap [@ComplexHeatmap]. The
 [sechm](http://www.bioconductor.org/packages/release/bioc/vignettes/sechm/inst/doc/sechm.html)
-package provides wrapper for _ComplexHeatmap_ and its usage is
-explained in chapter [@sec-viz-chapter] along with the `pheatmap`
-package for clustered heatmaps.
+package provides wrapper for *ComplexHeatmap* and its usage is explained
+in chapter [@sec-viz-chapter] along with the `pheatmap` package for
+clustered heatmaps.
