--- a/inst/pages/21_microbiome_community.qmd
+++ b/inst/pages/21_microbiome_community.qmd
@@ -55,7 +55,7 @@ color of each intersection point represents abundance of a taxon in a
 specific sample.
 
 Here, abundances are first CLR (centered log-ratio) transformed to
-remove compositionality bias. Then Z transformation is applied to
+remove compositionality bias. Then standardize transformation is applied to
 CLR-transformed data. This shifts all taxa to zero mean and unit
 variance, allowing visual comparison between taxa that have different
 absolute abundance levels. After these rough visual exploration
@@ -246,7 +246,7 @@ values in ascending order. This approach preserves the relationships
 between data points according to the ordination method's spatial
 configuration, rather than relying on hierarchical clustering.
 
-First, we will load the necessary libraries and create the `tse` object from the `GlobalPatterns` dataset.
+First, we will load the necessary libraries and load `GlobalPatterns`, which is a `TreeSE` object.
 
 ```{r setup-libraries-data}
 # Load the required libraries
@@ -270,7 +270,7 @@ assay(tse, "counts") <- assay(tse, "counts") + 1
 # Transform the samples into relative abundances using CLR
 tse <- transformAssay(tse, assay.type = "counts", method = "clr", MARGIN = "samples", name = "clr")
 
-# Transform the features (taxa) into zero mean, unit variance (z transformation)
+# Transform the features (taxa) into zero mean, unit variance (standardize transformation)
 tse <- transformAssay(tse, assay.type = "clr", method = "standardize", MARGIN = "features", name = "standardized")
 
 # Perform PCA on the dataset
