--- a/inst/pages/04_containers.qmd
+++ b/inst/pages/04_containers.qmd
@@ -2,6 +2,7 @@
 
 ```{r setup, echo=FALSE, results="asis"}
 library(rebook)
+library(DT)
 chapterPreamble()
 ```
 
@@ -754,6 +755,20 @@ Conversion is possible between other data formats. Interested readers can refer 
 * [importQZA](https://microbiome.github.io/mia/reference/importQIIME2.html)
 
 ## Exporting data container {#sec-exporting-data-container}
+
+### Transforming a TreeSummarizedExperiment into a dataframe
+
+Transforming a TreeSE object into a dataframe is straightforward with the MIA package. The `meltAssay` function is particularly handy for this purpose. It allows you to melt various parts of a TreeSE object into a dataframe based on the parameters you specify.
+
+```{r}
+molten_tse <- mia::meltAssay(tse,
+                        add_row_data = TRUE,
+                        add_col_data = TRUE,
+                        assay.type = "counts")
+
+# Shows the dataframe
+datatable(molten_tse,options = list(pageLength = 5),rownames = FALSE)
+```
 
 ### Export TreeSummarizedExperiment
 
