Update z method to standardize
Signed-off-by: Daena Rys <rysdaena8@gmail.com>

--- a/inst/pages/23_multi-assay_analyses.qmd
+++ b/inst/pages/23_multi-assay_analyses.qmd
@@ -191,10 +191,10 @@ mae[[2]] <- transformAssay(mae[[2]], assay.type = "nmr",
                             MARGIN = "samples",
                             method = "log10")
 
-# Transforming biomarker data with z-transform
+# Transforming biomarker data with standardize-transform
 mae[[3]] <- transformAssay(mae[[3]], assay.type = "signals",
                            MARGIN = "features",
-                           method = "z", pseudocount = 1)
+                           method = "standardize", pseudocount = 1)
 
 # Removing the assays no longer needed
 assay(mae[[1]], "counts") <- NULL
