--- a/inst/pages/24_biclustering.Rmd
+++ b/inst/pages/24_biclustering.Rmd
@@ -78,10 +78,10 @@ Next we can plot clusters. Commonly used plot is heatmap with annotations.
 
 library(pheatmap)
 
-# z-transform for heatmap
+# standardize-transform for heatmap
 mae[[1]] <- transformAssay(mae[[1]], assay.type = "rclr",
                             MARGIN = "features",
-                            method = "z", name = "clr_z")
+                            method = "standardize", name = "clr_z")
 
 # Create annotations. When column names are equal, they should share levels. 
 # Here samples include 3 clusters, and taxa 2. That is why we have to make 
