--- a/inst/pages/19_visualization_techniques.qmd
+++ b/inst/pages/19_visualization_techniques.qmd
@@ -354,10 +354,10 @@ tse_phylum <- mergeFeaturesByRank(tse,
 # Add clr-transformation on samples
 tse_phylum <- transformAssay(tse_phylum, MARGIN = "samples", method = "clr", assay.type = "counts", pseudocount=1)
 
-# Add z-transformation on features (taxa)
+# Add standardize-transformation on features (taxa)
 tse_phylum <- transformAssay(tse_phylum, assay.type = "clr",
                               MARGIN = "features", 
-                              method = "z", name = "clr_z")
+                              method = "standardize", name = "clr_z")
 
 # Take subset: only samples from feces, skin, or tongue
 tse_phylum_subset <- tse_phylum[ , tse_phylum$SampleType %in% c("Feces", "Skin", "Tongue") ]
@@ -366,10 +366,10 @@ tse_phylum_subset <- tse_phylum[ , tse_phylum$SampleType %in% c("Feces", "Skin",
 tse_phylum_subset <- transformAssay(tse_phylum_subset, method = "clr",
                                      MARGIN="samples",
                                      assay.type = "counts", pseudocount=1)
-# Does z-transformation
+# Does standardize-transformation
 tse_phylum_subset <- transformAssay(tse_phylum_subset, assay.type = "clr",
                                      MARGIN = "features", 
-                                     method = "z", name = "clr_z")
+                                     method = "standardize", name = "clr_z")
 
 # Get n most abundant taxa, and subsets the data by them
 top_taxa <- getTop(tse_phylum_subset, top = 20)
