--- a/inst/pages/21_microbiome_community.qmd
+++ b/inst/pages/21_microbiome_community.qmd
@@ -65,10 +65,10 @@ tse_phylum <- transformAssay(tse_phylum, assay.type = "counts",
 tse_phylum <- transformAssay(tse_phylum, assay.type = "relabundance",
                               method = "clr", pseudocount = TRUE)
 
-# Add z-transformation on features (taxa)
+# Add standardize-transformation on features (taxa)
 tse_phylum <- transformAssay(tse_phylum, assay.type = "clr", 
                               MARGIN = "features",
-                              method = "z", name = "clr_z")
+                              method = "standardize", name = "clr_z")
 ```
 
 Visualize as a heatmap.
@@ -109,7 +109,7 @@ tse_phylum_subset <- transformAssay(tse_phylum_subset,
 
 tse_phylum_subset <- transformAssay(tse_phylum_subset, assay.type = "clr",
                                      MARGIN = "features", 
-                                     method = "z", name = "clr_z")
+                                     method = "standardize", name = "clr_z")
 
 # Get n most abundant taxa, and subsets the data by them
 top_taxa <- getTop(tse_phylum_subset, top = 20)
