--- a/inst/pages/24_clustering.qmd
+++ b/inst/pages/24_clustering.qmd
@@ -395,9 +395,9 @@ Next we can plot clusters. Annotated heatmap is a common choice.
 
 ```{r cobiclust_3a, fig.width=14, fig.height=12}
 library(pheatmap)
-# z-transform for heatmap
+# standardize-transform for heatmap
 mae[[1]] <- transformAssay(mae[[1]], assay.type = "rclr",
-                            MARGIN = "features", method = "z", name = "rclr_z")
+                            MARGIN = "features", method = "standardize", name = "rclr_z")
 
 # Create annotations. When column names are equal, they should share levels.
 # Here samples include 3 clusters, and taxa 2. That is why we have to make
