--- a/inst/pages/Introductory-workflow.qmd
+++ b/inst/pages/Introductory-workflow.qmd
@@ -25,7 +25,7 @@ library(DT)
 
 You can either choose to use your own data or one of the built-in datasets provided by mia which you may find here @sec-example-data:
 
-In this tutorial, we'll be using the [Tengeler2020](https://microbiome.github.io/mia/reference/Tengeler2020.html) dataset. This dataset was made by A.C. Tengeler to try to demonstrate the impact of altered microbiomes on the brain structure. Here's how we can load the data into our R environment:
+In this tutorial, we'll be using the @Tengeler2020 dataset. This dataset was made by A.C. Tengeler to try to demonstrate the impact of altered microbiomes on the brain structure. Here's how we can load the data into our R environment:
 
 ```{r}
 data("Tengeler2020", package="mia")
@@ -84,7 +84,7 @@ Here `rowData(tse)` returns a DataFrame with 151 rows and 7 columns. Each row re
 
 In the example, ***Kingdom*** indicates whether the feature belongs to the kingdom of bacteria or archaea, ***Phylum*** indicates the phylum to which the individual belongs and so on down to the specific species.
 
-To illustrate the structure of a *TreeSummarizedExperiment*, here's [**an article**](https://f1000research.com/articles/9-1246) that uses this type of object. Also, please take a look at figure 1 below.
+To illustrate the structure of a *TreeSummarizedExperiment*, here's an article of @Huang2021 that uses this type of object. Also, please take a look at figure 1 below.
 
 ![1. Storing microbial data: the structure of a TreeSummarizedExperiment](images/TSE-structure.svg){.lightbox .contentimg}
 
@@ -104,18 +104,21 @@ Using the Tengeler2020 dataset, we can focus on a certain cohort for example. Do
 tse_subset_by_sample <- tse[ , tse$cohort =="Cohort_1"]
 ```
 
-This will create a *TreeSummarizedExperiment* Object only containing samples of the first cohort. To visualize the resulting object as a dataframe we can use the `meltAssay` method and specify what columns will be put into the dataframe:
-
-```{r}
-molten_tse <- mia::meltAssay(tse_subset_by_sample,
-                        add_row_data = TRUE,
-                        add_col_data = TRUE,
-                        assay.type = "counts")
-
-datatable(molten_tse,options = list(pageLength = 5),rownames = FALSE)
-```
+This will create a *TreeSummarizedExperiment* Object only containing samples of the first cohort.
 
 ## Agglomerating data
+
+To further push your data analysis and focus on its distribution at a specific taxonomic rank, it can be beneficial to agglomerate your data to that particular level. The agglomerateByRank function simplifies this process, enabling more streamlined and effective analyses. Here’s an example:
+
+```{r}
+#| label: agglomerating-data
+tse.agglomerated <- agglomerateByRank(tse, rank='Phylum')
+
+# Check
+datatable(data.frame(rowData(tse.agglomerated)),options = list(pageLength = 5),rownames = FALSE)
+```
+
+Great! Now, our data is confined to the taxonomic information up to the Phylum level, allowing the analysis to be focused on this specific rank. In the rest of the workflow, we won't be using the agglomerated data but all of the code beneath can be used on this.
 
 # Metrics
 
@@ -127,7 +130,7 @@ Community diversity in microbiology is measured by several indices:
 -   equitability (distribution of species within a microbiome)
 -   diversity (combination of the two)
 
-[**Hill's coefficient**](https://en.wikipedia.org/wiki/Hill_equation_(biochemistry)) combines these measures into a single equation. All these variations are referred to as alpha diversity.
+The **coefficient of @Hill** combines these measures into a single equation. All these variations are referred to as alpha diversity.
 
 ```{r}
 tse_alpha <- Tengeler2020
@@ -205,7 +208,7 @@ It's very important to make all these comparisons in order to quantify diversity
 
 ## Community similarity
 
-Community similarity refers to the way microorganisms resemble each other in terms of their composition and abundance of different microbial taxa. This can help us understand to what degree different samples resemble each other and finding key information. In microbiome analysis however, it's more common to measure the dissimilarity/Beta diversity between two samples A and B using the bray-Curtis measure which is defined as follows:
+Community similarity refers to the way microorganisms resemble each other in terms of their composition and abundance of different microbial taxa. This can help us understand to what degree different samples resemble each other and finding key information. In microbiome analysis however, it's more common to measure the dissimilarity/Beta diversity between two samples A and B using the Bray-Curtis measure which is defined as follows:
 
 $$
 BC_{ij} = \frac{\sum_{k} |A_{k} - B_{k}|}{\sum_{k} (A_{k} + B_{k})}
@@ -225,9 +228,9 @@ assay(tse, "relabundance")[5:10,1:10]
 
 In our case, the assay contains 151 rows and 27 columns. Having so many columns and thus dimensions can be troublesome for visualizing dissimilarity.
 
-In order to visualize the dissimilarity between the different samples, we can conduct a Principal Coordinate analysis on the newly created assay. This essentially projects the Bray-curtis dimensions onto a lower space whilst maintaining as much of the variation as possible, the projected values are called principal coordinates. You can read more [**here**](https://en.wikipedia.org/wiki/Multidimensional_scaling#Types).
+In order to visualize the dissimilarity between the different samples, we can conduct a Principal Coordinate analysis on the newly created assay. This essentially projects the Bray-curtis dimensions onto a lower space whilst maintaining as much of the variation as possible, the projected values are called principal coordinates. You can read more on @Multidimensional-scaling here.
 
-MIA doesn't provide a direct way to reduce dimensionality but we can use Bioconductor's scater package and the vegan package, the latter can be found [**here**](https://cran.r-project.org/web/packages/vegan/vegan.pdf) to turn the dissimilarity into actual distances that can be visualized:
+mia provides some dimension reduction techniques, such as dbRDA. Additionally, we can use Bioconductor's scater package and the vegan package, made by @R_vegan to turn the dissimilarity into actual distances that can be visualized:
 
 ```{r}
 #| output: false
@@ -278,7 +281,7 @@ There we have it! Each axis shows the amount of variance or in our case dissimil
 
 <hr>
 
-# Datavisualization
+# Data visualization
 
 <h2>Acknowledgements</h2>
 
