--- a/inst/pages/Introductory-workflow.qmd
+++ b/inst/pages/Introductory-workflow.qmd
@@ -13,11 +13,13 @@ Hello and welcome to a complete workflow using the latest R/Bioconductor tools f
 When using microbiome packages, there are many different ways to import your data. Let's first load the mia package:
 
 ```{r}
+#| label: loadMia
 #| output: false
 library(mia)
 ```
 
 ```{r}
+#| label: loadDT
 #| echo: false 
 #| output: false
 library(DT)
@@ -28,6 +30,7 @@ You can either choose to use your own data or one of the built-in datasets provi
 In this tutorial, we'll be using the @Tengeler2020 dataset. This dataset was made by A.C. Tengeler to try to demonstrate the impact of altered microbiomes on the brain structure. Here's how we can load the data into our R environment:
 
 ```{r}
+#| label: loadDataset
 data("Tengeler2020", package="mia")
 tse <- Tengeler2020
 ```
@@ -45,6 +48,7 @@ There are of course other ways to import your data using the [**mia package**](h
 An assay is a way of measuring the presence and abundance of different types of microbes in a sample. If you want to know how many bacteria of a certain type are in your gut, you can use an assay to measure this. In this example, we subset the assay using brackets to show only the first 5 rows and the first ten columns. This makes it easier to understand and read. We'll discuss more on subsetting later.
 
 ```{r}
+#| label: showAssay
 assay(tse)[1:5,1:10] 
 ```
 
@@ -53,7 +57,11 @@ assay(tse)[1:5,1:10]
 Another important aspect of microbiome analysis is sample data.
 
 ```{r}
+#| label: showColdata
+# Transform the colData to a dataframe
 tse_df_colData <- as.data.frame(colData(tse))
+
+# Show as an interactive table
 datatable(tse_df_colData,options = list(pageLength = 5),rownames = FALSE)
 ```
 
@@ -64,17 +72,20 @@ In this example, `colData(tse)` returns a DataFrame with 26 rows and 7 columns. 
 rowData contains data on sample characteristics, particularly taxonomic information.
 
 ```{r}
+#| label: setWarning
 #| echo: false 
 #| output: false
 options(warn = -1)
 ```
 
 ```{r}
+#| label: showRowdata
 tse_df_rowData <- as.data.frame(rowData(tse))
 datatable(tse_df_rowData, options = list(pageLength = 5))
 ```
 
 ```{r}
+#| label: setWarning2
 #| echo: false 
 #| output: false
 options(warn = 0)
@@ -101,6 +112,7 @@ In some cases, you may only need to use part of your original *TreeSummarizedExp
 Using the Tengeler2020 dataset, we can focus on a certain cohort for example. Doing this is pretty straightforward:
 
 ```{r}
+#| label: subsetBySample
 tse_subset_by_sample <- tse[ , tse$cohort =="Cohort_1"]
 ```
 
@@ -133,6 +145,7 @@ Community diversity in microbiology is measured by several indices:
 The **coefficient of @Hill** combines these measures into a single equation. All these variations are referred to as alpha diversity.
 
 ```{r}
+#| label: calculateRichness
 tse_alpha <- Tengeler2020
 
 # Estimate (observed) richness
@@ -148,11 +161,13 @@ head(tse_alpha$observed)
 The result is showing the estimated richness values for different samples or locations within the dataset. It gives an idea of how diverse each sample is in terms of the number of different species present. We can then create a graph to visualize this.
 
 ```{r}
+#| label: loadScater
 #| output: false
 library(scater)
 ```
 
 ```{r}
+#| label: plotColdata
 plotColData(tse_alpha, 
             "observed", 
             "cohort", 
@@ -172,6 +187,7 @@ $$ p~i~ being the proportion of a certain microorganism.
 First, we can easily calculate this measure and add them to our TreeSE.
 
 ```{r}
+#| label: calculateDiversity
 tse_alpha <- mia::estimateDiversity(tse_alpha, 
                               assay.type = "counts",
                               index = c("shannon"), 
@@ -181,6 +197,7 @@ tse_alpha <- mia::estimateDiversity(tse_alpha,
 We can also compare the two measures of diversity by producing the following graphs.
 
 ```{r}
+#| label: violinPlots
 library(patchwork)
 
 # Create the plots
@@ -212,27 +229,26 @@ Community similarity refers to the way microorganisms resemble each other in ter
 
 $$
 BC_{ij} = \frac{\sum_{k} |A_{k} - B_{k}|}{\sum_{k} (A_{k} + B_{k})}
-$$ Luckily for us, the [**mia package**](https://microbiome.github.io/mia/) provides an easy way to calculate the Bray-Curtis dissimilarity and add it to our TreeSE using the `transformAssay` method:
+$$ Luckily for us, the [**mia package**](https://microbiome.github.io/mia/) provides an easy way to calculate the relative Abundance to our TreeSE using the `transformAssay` method.
 
 ```{r}
+#| label: calculateRelabundance
 tse <- transformAssay(tse,
                       assay.type = "counts",
                       method = "relabundance")
 ```
-
-This will take the original counts assay and apply the Bray-Curtis formula to it. The result is a matrix with the sample identifiers as rows and the dissimilarity to other samples as columns. It can be accessed in the assays of the tse:
+This will take the original counts assay and apply the calculate the relative abundances. The result is a matrix with the sample identifiers as rows and the relative abundances for each taxon within those samples as columns. It can be accessed in the assays of the tse:
 
 ```{r}
+#| label: showRelabundance
 assay(tse, "relabundance")[5:10,1:10]
 ```
 
-In our case, the assay contains 151 rows and 27 columns. Having so many columns and thus dimensions can be troublesome for visualizing dissimilarity.
 
-In order to visualize the dissimilarity between the different samples, we can conduct a Principal Coordinate analysis on the newly created assay. This essentially projects the Bray-curtis dimensions onto a lower space whilst maintaining as much of the variation as possible, the projected values are called principal coordinates. You can read more on @Multidimensional-scaling here.
-
-mia provides some dimension reduction techniques, such as dbRDA. Additionally, we can use Bioconductor's scater package and the vegan package, made by @R_vegan to turn the dissimilarity into actual distances that can be visualized:
+Then we can add the Bray-Curtis dissimilarity :
 
 ```{r}
+#| label: calculateBrayCurtis
 #| output: false
 # Load package to plot reducedDim
 library(scater)
@@ -245,15 +261,23 @@ tse <- runMDS(tse,
               name = "MDS_bray")
 ```
 
-Now that we calculated the principal coordinates we can plot them onto a two dimensional space as such:
+
+
+In our case, the assay contains 151 rows and 27 columns. Having so many columns and thus dimensions can be troublesome for visualizing dissimilarity.
+
+In order to visualize the dissimilarity between the different samples, we can conduct a Principal Coordinate analysis on the newly created assay. This essentially projects the Bray-curtis dimensions onto a lower space whilst maintaining as much of the variation as possible, the projected values are called principal coordinates. You can read more on @Multidimensional-scaling here.
+
+mia provides some dimension reduction techniques, such as dbRDA. Additionally, we can use Bioconductor's scater package and the vegan package, made by @R_vegan to turn the dissimilarity into actual distances that can be visualized:
 
 ```{r}
+#| label: loadPlotly
 #| output: false
 # Makes the plots interactive
 library(plotly)
 ```
 
 ```{r}
+#| label: showPCoA
 # Create ggplot object
 p <- plotReducedDim(tse, "MDS_bray") +
   geom_point(color = "#659b91")
@@ -265,6 +289,7 @@ ggplotly(p)
 However, the axes are not very informative and the amount of captured variance by the algorithm is nowhere to be found. We can tweak the plot to show some more information as such:
 
 ```{r}
+#| label: addVariancePCoA
 # Calculate explained variance
 e <- attr(reducedDim(tse, "MDS_bray"), "eig")
 rel_eig <- e / sum(e[e > 0])
@@ -281,7 +306,47 @@ There we have it! Each axis shows the amount of variance or in our case dissimil
 
 <hr>
 
-# Data visualization
+# Datavisualization using heatmaps
+
+Heatmaps are one of the most versatile ways to visualise your data. In this section we'll cover how to create a basic heatmap to visualise the most prevalent features using the [**sechm library**](https://bioconductor.org/packages/release/bioc/html/sechm.html). For a more detailed heatmap, please revert to [**this section**](https://microbiome.github.io/OMA/docs/devel/pages/23_multi-assay_analyses.html) of the OMA book.
+
+Let's first load the library:
+
+```{r}
+#| label: load-sechm
+#| output: false
+library(sechm)
+```
+
+Then, let's subset the TreeSE to the most prevalent taxa:
+
+```{r}
+#| label: most-prevalent
+tse.subset <- subsetByPrevalent(tse,prevalence=0.5)[1:5,]
+```
+
+When subsetting with this function, the resulting object no longer contains the correct relative abundances because these abundances were originally calculated based on the full dataset, not the subsetted one. Therefore, we need to recalculate the values to reflect the subset accurately. For the sake of readability, we'll also subset to the first five taxa after the initial subset.
+
+```{r}
+#| label: recalculate-relabundance
+tse.subset <- transformAssay(tse.subset, assay.type = "counts", 
+                             method = "relabundance")
+
+```
+
+Now that we have prepared the data, we can use the previously loaded sechm library to plot the heatmap:
+
+```{r}
+#| label: heatmap
+# Sets the colors
+setSechmOption("hmcols", value=c("#F0F0FF","#007562"))
+
+# Plots the actual heatmap.
+sechm(tse.subset, features = rownames(rowData(tse.subset)),
+      assayName="relabundance",show_colnames=TRUE)
+```
+
+In the heatmap above, it is apparent that Parabacteroides are relatively common in some samples while Akkermansia is detected very seldom.
 
 <h2>Acknowledgements</h2>
 
