--- a/inst/pages/11_taxonomic_information.qmd
+++ b/inst/pages/11_taxonomic_information.qmd
@@ -120,7 +120,7 @@ head(getUnique(tse, rank = "Phylum"))
 
 ### Generate a hierarchy tree on the fly {#sec-fly-tree}
 
-A hierarchy tree is not an actual phylogene tic tree.
+A hierarchy tree is not an actual phylogenetic tree.
 A hierarchy tree shows mapping between the taxonomic levels in taxonomic rank table (included in rowData), rather than the detailed phylogenetic relations included in a phylogenetic tree
 
 For instance, the TreeSummarizedExperiment dataset, Tengeler2020, contains an actual phylogenetic tree.
@@ -336,9 +336,9 @@ references.
    in microbiome-based classification performance [@Giliberti2022,
    Karwowska2024].
 
- * 'z' Z transformation scales data to zero mean and unit variance.
-   This is used to bring features (or samples) to more comparable
-   levels in terms of mean and scale of the values. This can enhance
+ * 'Standardize' Standardize transformation scales data to zero mean and 
+   unit variance. This is used to bring features (or samples) to more 
+   comparable levels in terms of mean and scale of the values. This can enhance
    visualization and interpretation of the data
 
 * 'log', 'log2', 'log10' Logarithmic transformations, used e.g. to
