shortened storing data section

--- a/inst/pages/Introductory-workflow.qmd
+++ b/inst/pages/Introductory-workflow.qmd
@@ -43,18 +43,16 @@ There are of course other ways to import your data using the [**mia package**](h
 
 *TreeSummarizedExperiment* or TreeSE object is the type of object used within the [**mia package**](https://microbiome.github.io/mia/) to store your data. It's a versatile and multi-purpose data type that allows for an efficient way to store and access data.
 
-## Assays
+Here's a quick reminder on how to access certain types of data:
 
-An assay is a way of measuring the presence and abundance of different types of microbes in a sample. If you want to know how many bacteria of a certain type are in your gut, you can use an assay to measure this. In this example, we subset the assay using brackets to show only the first 5 rows and the first ten columns. This makes it easier to understand and read. We'll discuss more on subsetting later.
+You can access [**assays**](https://microbiome.github.io/OMA/docs/devel/pages/04_containers.html#sec-assay-slot) as such:
 
 ```{r}
 #| label: showAssay
 assay(tse)[1:5,1:10] 
 ```
 
-## colData
-
-Another important aspect of microbiome analysis is sample data.
+Whereas [**colData**](https://microbiome.github.io/OMA/docs/devel/pages/10_manipulation.html#add-or-modify-data) is accessible through:
 
 ```{r}
 #| label: showColdata
@@ -65,11 +63,7 @@ tse_df_colData <- as.data.frame(colData(tse))
 datatable(tse_df_colData,options = list(pageLength = 5),rownames = FALSE)
 ```
 
-In this example, `colData(tse)` returns a DataFrame with 26 rows and 7 columns. Each row represents a sample, while each column represents a different aspect of the sample data.
-
-## rowData
-
-rowData contains data on sample characteristics, particularly taxonomic information.
+[**rowData**](https://microbiome.github.io/OMA/docs/devel/pages/04_containers.html#rowdata) contains data on sample characteristics, particularly taxonomic information.
 
 ```{r}
 #| label: setWarning
@@ -92,8 +86,6 @@ options(warn = 0)
 ```
 
 Here `rowData(tse)` returns a DataFrame with 151 rows and 7 columns. Each row represents an organism and each column a taxonomic level.
-
-In the example, ***Kingdom*** indicates whether the feature belongs to the kingdom of bacteria or archaea, ***Phylum*** indicates the phylum to which the individual belongs and so on down to the specific species.
 
 To illustrate the structure of a *TreeSummarizedExperiment*, here's an article of @Huang2021 that uses this type of object. Also, please take a look at figure 1 below.
 
